# mcp-multi-agent

./: .gitignore  PLAN.md  README.md
.claude/: settings.local.json
backend/: .env.example  pyproject.toml  run.py
backend/agent/: mcp_client.py  orchestrator.py  tool_registry.py
backend/app/: main.py  models.py
backend/sample_files/: research.md
backend/servers/: filesystem_server.py  github_server.py  web_search_server.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: ChatMessage.jsx  ChatWindow.jsx  ToolCard.jsx  ToolSidebar.jsx
frontend/src/hooks/: useWebSocket.js
frontend/src/styles/: ChatWindow.css  ToolCard.css  ToolSidebar.css
